[gd_scene load_steps=16 format=2]

[ext_resource path="res://SISTEMA/OBJETOS/COLECTABLES/USADOS/Orbe.tscn" type="PackedScene" id=1]
[ext_resource path="res://SISTEMA/GUI/Mensaje Toma de Decisiones/BotonPixelArt.tscn" type="PackedScene" id=2]
[ext_resource path="res://RECURSOS/SHADERS/FondoDesenfocado.tres" type="Material" id=3]
[ext_resource path="res://RECURSOS/IMAGENES/PUZZLE/Orbe_soket.png" type="Texture" id=4]
[ext_resource path="res://RECURSOS/FONTS/my-standard.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://SISTEMA/GUI/Puzzle/Puzzle.gd" type="Script" id=6]
[ext_resource path="res://RECURSOS/IMAGENES/PLAYER/HojaSpriteDelPersonaje.png" type="Texture" id=7]
[ext_resource path="res://RECURSOS/FONTS/pixelart.ttf" type="DynamicFontData" id=8]
[ext_resource path="res://SISTEMA/GUI/Puzzle/Button_volver_a_jugar.gd" type="Script" id=9]
[ext_resource path="res://SISTEMA/GUI/Puzzle/GridContainer_datos.gd" type="Script" id=10]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.109804, 0.0941176, 0.145098, 1 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.160784, 0.180392, 0.960784, 1 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0, 0, 0, 1 )

[sub_resource type="DynamicFont" id=2]
size = 60
outline_size = 3
outline_color = Color( 0.290196, 0.203922, 0.533333, 1 )
extra_spacing_char = 5
font_data = ExtResource( 8 )

[sub_resource type="DynamicFont" id=3]
size = 30
font_data = ExtResource( 5 )

[node name="Puzzle" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 6 )

[node name="TextureRect" type="ColorRect" parent="."]
material = ExtResource( 3 )
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Panel2" type="Panel" parent="."]
margin_left = 560.0
margin_top = 176.0
margin_right = 1352.0
margin_bottom = 968.0
custom_styles/panel = SubResource( 1 )

[node name="GridContainer" type="GridContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -390.0
margin_top = -350.0
margin_right = 390.0
margin_bottom = 430.0
custom_constants/vseparation = 0
custom_constants/hseparation = 0
columns = 4
script = ExtResource( 10 )

[node name="Panel" type="Panel" parent="."]
margin_left = 1496.0
margin_top = 232.0
margin_right = 1680.0
margin_bottom = 920.0
custom_styles/panel = SubResource( 1 )

[node name="ScrollContainer" type="ScrollContainer" parent="."]
margin_left = 1512.0
margin_top = 248.0
margin_right = 1722.0
margin_bottom = 1068.0
rect_scale = Vector2( 0.8, 0.8 )
follow_focus = true
scroll_horizontal_enabled = false

[node name="VBoxContainer" type="VBoxContainer" parent="ScrollContainer"]
custom_constants/separation = 18

[node name="ProgressBar" type="ProgressBar" parent="."]
margin_left = 560.0
margin_top = 64.0
margin_right = 1512.0
margin_bottom = 128.0
custom_styles/fg = SubResource( 4 )
custom_styles/bg = SubResource( 5 )
percent_visible = false

[node name="Mensaje" type="Panel" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -710.0
margin_top = -242.0
margin_right = 710.0
margin_bottom = 242.0

[node name="Mensaje" type="Label" parent="Mensaje"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -592.0
margin_top = -212.0
margin_right = 617.0
margin_bottom = -140.0
custom_fonts/font = SubResource( 2 )
text = "felicitaciones, ha ganado!"
align = 1

[node name="Button" type="Button" parent="Mensaje"]
margin_left = 270.0
margin_top = 366.0
margin_right = 540.0
margin_bottom = 436.0
custom_fonts/font = SubResource( 3 )
text = "Volver a jugar"
script = ExtResource( 9 )

[node name="Button2" type="Button" parent="Mensaje"]
margin_left = 910.0
margin_top = 366.0
margin_right = 1180.0
margin_bottom = 436.0
custom_fonts/font = SubResource( 3 )
text = "Salir"

[node name="TextureRect" type="Sprite" parent="Mensaje"]
position = Vector2( 702, 222 )
scale = Vector2( 5, 5 )
texture = ExtResource( 7 )
region_enabled = true
region_rect = Rect2( 0, 0, 32, 32 )

[node name="PuntosInicioFinal" type="Node" parent="."]

[node name="Button2" parent="." instance=ExtResource( 2 )]
margin_left = 40.0
margin_top = 24.0
margin_right = 310.0
margin_bottom = 94.0
text = "Salir..."

[node name="TextureRect2" type="TextureRect" parent="."]
margin_left = 1536.0
margin_top = 24.0
margin_right = 1672.0
margin_bottom = 168.0
texture = ExtResource( 4 )

[node name="Orbe" parent="." instance=ExtResource( 1 )]
visible = false
position = Vector2( 1608, 96 )
scale = Vector2( 7, 7 )

[connection signal="juego_ganado" from="." to="." method="_on_Puzzle_juego_ganado"]
[connection signal="juego_perdido" from="." to="." method="_on_Puzzle_juego_perdido"]
[connection signal="value_changed" from="ProgressBar" to="." method="_on_ProgressBar_value_changed"]
[connection signal="button_up" from="Mensaje/Button" to="." method="_on_Button_button_up"]
[connection signal="button_up" from="Mensaje/Button2" to="." method="_on_Button2_button_up"]
[connection signal="button_up" from="Button2" to="." method="_on_Button2_button_up"]
